crates/test-files/fixtures/compile_errors/ctx_not_first.fe
use std::context::Context

contract Foo {
    pub fn bar(baz: u256, ctx: Context) {}
}
